--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,7 +17,8 @@
 .input-photo-block {
   display: block;
   height: 80%;
-  width: 40%;
+  /* width: 40%; */
+  min-height: 320px;
   border: 3px solid black;
   border-style: dashed;
   border-radius: 25px;
