--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,16 @@
   border-style: dashed;
   border-radius: 25px;
 }
+.title-margin {
+  margin-top: -20px;
+  margin-bottom: 30px;
+}
+.function-title {
+  width: 30%;
+  min-width: 150px;
+  max-width: 350px;
+  border: 3px solid black;
+}
 
 .width-100 {
   width: 100%;
